force-app/main/default/objects/Trigger_Handler__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_DELETE</fullName>
                <label>Before Delete</label>
            </value>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <default>true</default>
                <label>Before Insert</label>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
                <label>Before Update</label>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
                <label>After Delete</label>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
                <label>After Insert</label>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
                <label>After Undelete</label>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
                <label>After Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>