force-app/main/default/objects/Trigger_Handler__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>JSON parameters that can be used to configure the trigger handler class</description>
    <inlineHelpText>JSON parameters that can be used to configure the trigger handler class</inlineHelpText>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>