force-app/main/default/objects/Trigger_Handler__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>The object to trigger on. Must include namespace prefix, if applicable</description>
    <inlineHelpText>The object to trigger on. Must include namespace prefix, if applicable</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>